--- a/root-config/src/index.ejs
+++ b/root-config/src/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Online Shop Config</title>
+  <title>Root Config</title>
 
   <!--
     Remove this if you only support browsers that support async/await.
@@ -18,8 +17,7 @@
     This CSP allows any SSL-enabled host and for arbitrary eval(), but you should limit these directives further to increase your app's security.
     Learn more about CSP policies at https://content-security-policy.com/#directive
   -->
-  <meta http-equiv="Content-Security-Policy"
-    content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
   <meta name="importmap-type" content="systemjs-importmap" />
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
@@ -52,8 +50,8 @@
         "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
         "@Org79/root-config": "//localhost:9000/Org79-root-config.js",
         "@Org79/navbar-app": "http://localhost:8080/Org79-navbar-app.js",
-        "@Org79/customer-app": "http://localhost:8081/Org79-customer-app.js",
-        "@Org79/seller-app": "http://localhost:8082/Org79-seller-app.js"
+        "@Org79/signup-app": "http://localhost:8081/Org79-signup-app.js",
+        "@Org79/manageitem-app": "http://localhost:8082/Org79-manageitem-app.js"
       }
     }
   </script>
@@ -75,32 +73,7 @@
   <% } %>
 
 </head>
-<style>
-  body,
-  html {
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100%;
-  }
-
-  body {
-    display: flex;
-    flex-direction: column;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-</style>
-
 <body>
-  <div id="nav-container"></div>
-  <main>
-    <div id="customer-container"></div>
-    <div id="seller-container"></div>
-  </main>
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
@@ -109,5 +82,4 @@
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
-
 </html>
